--- a/scss/style.scss
+++ b/scss/style.scss
@@ -116,7 +116,7 @@ $mobile: 539px;
 						text-align: center;
 					}
 
-					&:last-child a {
+					&:last-child > a {
 						width: 30%;
 						position: absolute;
 						top: 55%;
@@ -126,6 +126,11 @@ $mobile: 539px;
 						font-family: "Spartan";
 						line-height: 15px;
 						border-right: none;
+
+						>i {
+							
+						}
+
 					}
 				}
 			}
@@ -254,27 +259,47 @@ $mobile: 539px;
 	.txt {
 		width: 60%;
 		position: absolute;
-		top: 40%;
-		left: 15%;
-		transform: translateY(-30%);
+		top: 25%;
+		left: 5%;
 		z-index: 2;
 
 		h1 {
-			font: 30px/1 "Spartan";
-			font-size: 70px;
+			font: 300 100px/1 "Spartan";
 			color: #111;
 			margin-bottom: 30px;
-			
 		}
 		p {
-			font: 30px/1.5 "Spartan";
-			font-size: 35px;
+			font:  35px/1.5 "Spartan";
 			color: #111;
+			margin-bottom: 70px;
+		}
+		a{
+			display: inline-block;
+			width: 350px;
+			height: 70px;
+			background: #ccc;
+			color: #fff;
+			font:  30px/70px "Spartan";
+			text-align: center;
+			position: relative;
+			padding-right: 10px;
+			text-align: left;
+			padding-left: 40px;
+
+			img {
+				position: absolute;
+				right: 10%;
+				top: 50%;
+				transform: translateY(-50%);
+
+			}
+			                                       
+			
 		}
 	}
 
 	#slider {
-		width: 55%;
+		width: 60%;
 		height: 100%;
 		position: absolute;
 		right: 0%;
@@ -294,8 +319,6 @@ $mobile: 539px;
 				display: flex;
 				justify-content: center;
 				align-items: center;
-
-				
 
 				&[data-index="1"] {
 					// background-image: url(../img/p1.jpg);
@@ -416,14 +439,12 @@ $mobile: 539px;
 			display: inline-block;
 			font: 700 25px/1 "Spartan";
 			color: rgb(206, 97, 111);
-			margin-bottom: 20px;
-			
+			margin-bottom: 25px;
 		}
 		h2 {
-			
-			font: 100 15px/1 "Spartan";
+			font: 100 17px/1 "Spartan";
 			color: #fff;
-			margin-bottom: 70px;
+			margin-bottom: 50px;
 		}
 		.wrap {
 			width: 100%;
@@ -437,68 +458,252 @@ $mobile: 539px;
 				width: 280px;
 				height: 280px;
 				margin: 0 auto;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
 
 				.icon {
 					display: inline-block;
 
 					i {
-						font-size: 30px; color: rgb(206, 97, 111);
+						font-size: 30px;
+						color: rgb(206, 97, 111);
 					}
 				}
 				.news_txt {
+					width: 80%;
+					h2 {
+						margin-bottom: 10px;
+						margin-top: 10px;
 
-					
-
-				}
-
-				// .pic {
-				// 	width: 100%;
-				// 	height: 100%;
-				// 	border-radius: 50%;
-				// 	background: #333;
-				// 	overflow: hidden;
-
-				// 	&:hover {
-				// 	}
-
-				// 	img {
-				// 		width: 100%;
-				// 		height: 100%;
-				// 		object-fit: cover;
-				// 		transition: 0.5s;
-
-				// 		&:hover img {
-				// 			transform: scale(1.2);
-				// 		}
-				// 	}
-				// }
-
-				h2 {
-					margin-bottom: 10px;
-					margin-top: 10px;
-
-					a {
-						display: inline-block;
-						font: bold 16px/30px "Spartan";
-						width: 150px;
-						height: 30px;
-						// background: #97ccb8;
-						// border: 1px dashed rgb(255, 189, 199);
-						text-align: center;
-						color: rgb(206, 97, 111);
-						box-sizing: border-box;
+						a {
+							display: inline-block;
+							font: bold 16px/30px "Spartan";
+							width: 150px;
+							height: 30px;
+							// background: #97ccb8;
+							// border: 1px dashed rgb(255, 189, 199);
+							text-align: center;
+							color: rgb(206, 97, 111);
+							box-sizing: border-box;
+						}
+						&:hover a {
+							background: rgb(255, 189, 199);
+							border: 1px dashed transparent;
+							border: none;
+							color: #fff;
+						}
 					}
-					&:hover a {
-						background: rgb(255, 189, 199);
-						border: 1px dashed transparent;
-						border: none;
+
+					p {
+						font: 14px/1.4 "Spartan";
 						color: #fff;
 					}
 				}
+			}
+		}
+	}
+}
+//  brand ---------------------------------------------------------------
+#product {
+	width: 100%;
+	padding: 200px 0;
+	background: #fff;
+	.inner {
+		width: 1180px;
+		margin: 0 auto;
+		position: relative;
+		text-align: center;
 
-				p {
-					font: 14px/1.4 "Spartan";
-					color: #fff;
+		h1 {
+			font: bold 35px/1 "Spartan";
+			color: #111;
+			text-align: center;
+			margin-bottom: 40px;
+		}
+		>a{
+			display: inline;
+			height: 50px;
+			font: bold 25px/50px 'Spartan';
+			border: 1px solid #888;
+			color: #888;
+			border-radius: 30px;
+			margin-right: 15px;
+			padding: 10px 30px;
+			box-sizing: border-box;
+
+			
+		}
+		.wrap {
+			width: 100%;
+
+			.product_slider {
+				width: 100%;
+				height: 100%;
+				overflow: hidden;
+
+				.product_list {
+					width: 3600px;
+					height: 100%;
+					overflow: hidden;
+
+					li {
+						width: 360px;
+						height: 500px;
+						float: left;
+						margin-right: 40px;
+						border-radius: 10px;
+						margin-top: 50px;
+						position: relative;
+						text-align: center;
+						
+
+						&[data-index="1"] {
+							background: rgb(156, 198, 237);
+						}
+						&[data-index="2"] {
+							background: rgb(255, 218, 223);
+						}
+						&[data-index="3"] {
+							background: rgb(255, 238, 168);
+						}
+						&[data-index="4"] {
+							background: rgb(179, 255, 194);
+						}
+						&[data-index="5"] {
+							background: #77A1D3;
+						}
+						&[data-index="6"] {
+							background: #fbc7d4;
+						}
+						&[data-index="7"] {
+							background: #1488CC;
+						}
+						&[data-index="8"] {
+							background: #B79891;
+						}
+						&[data-index="9"] {
+							background: #536976;
+						}
+
+						.txt {
+							position: absolute;
+							bottom: 10%;
+							left: 50%;
+							transform: translateX(-50%);
+
+							h2 {
+								font: bold 23px/1 "Spartan";
+								color: #111;
+								margin-bottom: 10px;
+							}
+							p {
+								font: bold 20px/1.5 "Noto Sans KR";
+								color: #111;
+								letter-spacing: 1.5px;
+								margin-bottom: 20px;
+							}
+
+							a {
+								display: inline-block;
+								width: 45px;
+								height: 45px;
+								border-radius:50%;
+								border: 4px solid #fff;
+								box-sizing: border-box;
+								margin-right: 10px;
+								box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.03);
+
+								&:nth-of-type(1) {
+									background: #7f8388;
+								}
+								&:nth-of-type(2) {
+									background: #a3a3a3;
+								}
+								&:nth-of-type(3) {
+									background: #d3d3d3;
+									margin-right: 0px;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+//  banner ---------------------------------------------------------------
+#banner {
+	width: 100%;
+	padding: 80px 0;
+	background: url(../img/banner2.jpg) no-repeat center/cover fixed;
+	background-image: rgba(0, 0, 0, 0.02);
+
+	.inner {
+		width: 1180px;
+		margin: 0 auto;
+		text-align: center;
+
+		h1 {
+			font: bold 15px/1 "spartan";
+			color: #fff;
+			margin-bottom: 15px;
+		}
+		h2 {
+			font: bold 35px/1 "spartan";
+			color: #fff;
+			margin-bottom: 15px;
+		}
+		p {
+			font: 16px/1.3 "arial";
+			color: #fff;
+			text-align: center;
+			margin-bottom: 35px;
+		}
+		.box {
+			width: 100%;
+			text-align: center;
+			margin-left: 20px;
+
+			a {
+				text-align: left;
+				padding-left: 20px;
+				display: inline-block;
+				width: 300px;
+				height: 60px;
+				margin-right: 10px;
+				background: rgba(0, 0, 0, 0.8);
+				color: #fff;
+				font: bold 15px/60px "Spartan";
+				position: relative;
+	
+
+				&:last-child {
+					width: 150px;
+					border: 1px solid #fff;
+					margin-right: 0;
+					background: rgba(0, 0, 0, 0.05);
+					box-sizing: border-box;
+				}
+				&:hover {
+					border: 1px solid #fff;
+
+					&:hover:last-child {
+						background: rgba(237, 176, 176, 0.8);
+					}
+				}
+
+				i {
+					position: absolute;
+					right: 20px;
+					font-size: 15px;
+					line-height: 60px;
+
+					&:last-child {
+						right: 50px;
+					}
 				}
 			}
 		}
@@ -508,7 +713,7 @@ $mobile: 539px;
 #brand {
 	width: 100%;
 	padding: 200px 0;
-	background: #efefef;
+	background: #fcf9f9;
 	.inner {
 		width: 1180px;
 		margin: 0 auto;
@@ -675,82 +880,6 @@ $mobile: 539px;
 	}
 }
 
-//  banner ---------------------------------------------------------------
-#banner {
-	width: 100%;
-	padding: 80px 0;
-	background: url(../img/banner2.jpg) no-repeat center/cover fixed;
-	background-image: rgba(0, 0, 0, 0.02);
-
-	.inner {
-		width: 1180px;
-		margin: 0 auto;
-		text-align: center;
-
-		h1 {
-			font: bold 15px/1 "spartan";
-			color: #fff;
-			margin-bottom: 15px;
-		}
-		h2 {
-			font: bold 35px/1 "spartan";
-			color: #fff;
-			margin-bottom: 15px;
-		}
-		p {
-			font: 16px/1.3 "arial";
-			color: #fff;
-			text-align: center;
-			margin-bottom: 35px;
-		}
-		.box {
-			width: 100%;
-			text-align: center;
-			margin-left: 20px;
-
-			a {
-				text-align: left;
-				padding-left: 20px;
-				display: inline-block;
-				width: 300px;
-				height: 60px;
-				margin-right: 10px;
-				background: rgba(0, 0, 0, 0.8);
-				color: #fff;
-				font: bold 15px/60px "Spartan";
-				position: relative;
-				transition: 0.5;
-
-				&:last-child {
-					width: 150px;
-					border: 1px solid #fff;
-					margin-right: 0;
-					background: rgba(0, 0, 0, 0.05);
-					box-sizing: border-box;
-				}
-				&:hover {
-					border: 1px solid #fff;
-
-					&:hover:last-child {
-						background: rgba(237, 176, 176, 0.8);
-					}
-				}
-
-				i {
-					position: absolute;
-					right: 20px;
-					font-size: 15px;
-					line-height: 60px;
-
-					&:last-child {
-						right: 50px;
-					}
-				}
-			}
-		}
-	}
-}
-
 //  comment ---------------------------------------------------------------
 #comment {
 	width: 100%;
@@ -760,50 +889,17 @@ $mobile: 539px;
 	.inner {
 		width: 1180px;
 		margin: 0 auto;
+		position: relative;
 
 		h1 {
-			@include title($fontSize: 20px, $mb: 30px);
-			color: #222;
+			@include title();
+			text-align: center;
+			
 		}
 
-		ul {
+		.wrap {
 			width: 100%;
 
-			li {
-				width: 100%;
-				border: 1px dotted #333;
-				margin-bottom: 20px;
-				padding: 15px 20px;
-				box-sizing: border-box;
-				transition: 0.5s;
-
-				&::after {
-					content: "";
-					display: block;
-					clear: both;
-				}
-				a {
-					font: 12px/1 "STIX Two Text";
-					color: #555;
-					float: left;
-					transition: 0.5s;
-				}
-				span {
-					font: 12px/1 "STIX Two Text";
-					color: #888;
-					transition: 0.5s;
-					float: right;
-				}
-				&:hover {
-					background: rgba(224, 154, 154, 0.8);
-					a {
-						color: #fff;
-					}
-					span {
-						color: #fff;
-					}
-				}
-			}
 		}
 	}
 }
