--- a/css/style.css
+++ b/css/style.css
@@ -964,25 +964,67 @@ fieldset {
           box-sizing: border-box;
           color: #fff;
           background: linear-gradient(60deg, #d9a7c7, #fffcdc); } }
-.department .sub_visual {
-  background-image: url(../img/d3.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  opacity: 0.8; }
-.department .inner {
-  position: relative; }
-  .department .inner h1 {
-    font: bold 50px/1 "Spartan";
-    color: #333;
-    letter-spacing: 1.5px;
-    text-align: center; }
-  .department .inner .division {
-    width: 100%;
-    height: auto; }
+.department {
+  width: 100%; }
+  .department .sub_visual {
+    background: #ccc;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    opacity: 0.8; }
+  .department .inner {
+    width: 1180px;
+    margin: 0 auto;
+    position: relative; }
+    .department .inner .wrap {
+      width: 100%; }
+      .department .inner .wrap::after {
+        content: "";
+        display: block;
+        clear: both; }
+      .department .inner .wrap .company {
+        width: 1180px;
+        height: 250px;
+        background: #ddd;
+        margin-bottom: 30px;
+        position: relative; }
+        .department .inner .wrap .company .main_pic {
+          width: 450px;
+          height: 100%;
+          background: #bcc9e9;
+          float: left; }
+          .department .inner .wrap .company .main_pic::before {
+            content: "";
+            display: block;
+            width: 50px;
+            height: 1px;
+            color: #000;
+            position: absolute;
+            top: 0;
+            left: 0; }
+        .department .inner .wrap .company .txt {
+          width: 55%;
+          position: absolute;
+          right: 0%;
+          top: 50%;
+          transform: translateY(-50%); }
+      .department .inner .wrap .team {
+        display: inline-block;
+        width: 100%;
+        background: #aaa;
+        text-align: center; }
+        .department .inner .wrap .team article {
+          width: 280px;
+          height: 300px;
+          margin-right: 20px;
+          background: pink;
+          margin-bottom: 20px;
+          float: left; }
+          .department .inner .wrap .team article:nth-child(4n+0) {
+            margin-right: 0; }
 
 .gallery .sub_visual {
-  background-color: #fff; }
+  background-color: #ccc; }
 .gallery .inner {
   padding: 0px 150px; }
   .gallery .inner h1 {
@@ -1476,7 +1518,12 @@ fieldset {
       border-radius: 30px;
       margin-right: 15px;
       padding: 10px 30px;
-      box-sizing: border-box; }
+      box-sizing: border-box;
+      transition: 0.5s; }
+      #product .inner > a:hover {
+        background: #91b6d6;
+        border: none;
+        color: #fff; }
     #product .inner .wrap {
       width: 100%; }
       #product .inner .wrap .product_slider {
@@ -1530,20 +1577,12 @@ fieldset {
                 margin-bottom: 20px; }
               #product .inner .wrap .product_slider .product_list li .txt a {
                 display: inline-block;
-                width: 45px;
-                height: 45px;
-                border-radius: 50%;
-                border: 4px solid #fff;
-                box-sizing: border-box;
-                margin-right: 10px;
-                box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.03); }
-                #product .inner .wrap .product_slider .product_list li .txt a:nth-of-type(1) {
-                  background: #7f8388; }
-                #product .inner .wrap .product_slider .product_list li .txt a:nth-of-type(2) {
-                  background: #a3a3a3; }
-                #product .inner .wrap .product_slider .product_list li .txt a:nth-of-type(3) {
-                  background: #d3d3d3;
-                  margin-right: 0px; }
+                width: 180px;
+                height: 50px;
+                border: 1px solid #fff;
+                font: bold 15px/50px 'Spartan';
+                text-align: center;
+                color: #fff; }
 
 #banner {
   width: 100%;
