--- a/scss/_department.scss
+++ b/scss/_department.scss
@@ -1,8 +1,9 @@
 @charset "utf-8";
 
 .department {
+	width: 100%;
 	.sub_visual {
-		background-image: url(../img/d3.jpg);
+		background: #ccc;
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-position: center center;
@@ -10,17 +11,77 @@
 	}
 
 	.inner {
+		width: 1180px;
+		margin: 0 auto;
 		position: relative;
 
-		h1 {
-			font: bold 50px/1 "Spartan";
-			color: #333;
-			letter-spacing: 1.5px;
-			text-align: center;
-		}
-		.division {
+		.wrap {
 			width: 100%;
-			height: auto;
+
+
+			&::after {
+				content: "";
+				display: block;
+				clear: both;
+			}
+
+			.company {
+				width: 1180px;
+				height: 250px;
+				background: #ddd;
+				margin-bottom: 30px;
+				position: relative;
+				
+				
+				.main_pic {
+					width: 450px;
+					height: 100%;
+					background: rgb(188, 201, 233);
+					float: left;
+
+					&::before {
+						content: "";
+						display: block;
+						width: 50px;
+						height: 1px;
+						color: #000;
+						position: absolute;
+						top: 0;
+						left: 0;
+					}
+				}
+				.txt {
+					width: 55%;
+					position: absolute;
+					right: 0%;
+					top: 50%;
+					transform: translateY(-50%);
+					
+					
+				}
+			}
+
+			.team {
+				display: inline-block;
+				width: 100%;
+				background: #aaa;
+				text-align: center;
+				
+			
+
+				article {
+					width: 280px;
+					height: 300px;
+					margin-right: 20px;
+					background: pink;
+					margin-bottom: 20px;
+					float: left;
+
+					&:nth-child(4n+0){
+						margin-right: 0;
+					}
+				}
+			}
 		}
 	}
 }
